test/invalid/reassign_wrong_type.py
# Reassigning variable with different type
def main() -> None:
    x: int = 5
    x = "hello"
    print(x)
